--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "package:chrome": "zip chrome.zip manifest.json hnmustread.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@tsconfig/recommended": "^1.0.7",
